--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="icon" href="./asset/img/favicon.png" />
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="./asset/css/style.css">
+    <link rel="stylesheet" href="./asset/css/responsive.css">
     <title>Pick Ball</title>
 </head>
 
 <body>
-    <div class="pick-ball pick-ball-tree">
+    <div class="pick-ball">
         <!-- HEADER -->
         <section class="header">
             <div class="header-wrapper">
@@ -32,10 +36,30 @@
             </div>
         </section>
 
-        <!-- BUTTON OPEN -->
-        <div class="choose-button">
-            <div class="primary-button">
-                CHOOSE
+        <!-- TREE -->
+        <div class="centering">
+            <div class="tree">
+                <img src="./asset/img/tree.png" alt="" class="tree-img">
+
+                <a class="bell bell--1" href="/open.html">
+                    <img src="./asset/img/bell.png" alt="" class="">
+                </a>
+
+                <a class="bell bell--2" href="/open.html">
+                    <img src="./asset/img/bell-2.png" alt="" class="">
+                </a>
+
+                <a class="bell bell--3" href="/open.html">
+                    <img src="./asset/img/bell-3.png" alt="" class="">
+                </a>
+
+                <a class="bell bell--4" href="/open.html">
+                    <img src="./asset/img/bell-4.png" alt="" class="">
+                </a>
+
+                <a class="bell bell--5" href="/open.html">
+                    <img src="./asset/img/bell-5.png" alt="" class="">
+                </a>
             </div>
         </div>
     </div>
@@ -43,4 +67,4 @@
 
 </html>
 
-<script src="./asset/js/main.js"></script>
+<!-- <script src="./asset/js/main.js"></script> -->
